<resources>
    <string name="app_name">Shipin1-CountBook</string>
    <string name="newCounter">New</string>
    <string name="save">Save</string>
    <string name="nameHint">Please enter the name of the counter</string>
    <string name="initialHint">Please enter the initial value of the counter</string>
    <string name="counterName">Counter Name:</string>
    <string name="valueName">Initial Value:</string>
    <string name="counterComment">Comment:</string>
    <string name="commentHint">Please enter the detail of the counter here</string>
    <string name="counterDelete">Delete</string>
</resources>
