<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.first.shipin1_countbook.NewCounter">

    <TextView
        android:textColor="#000000"
        android:padding="5dp"
        android:textSize="16sp"
        android:textStyle="bold"
        android:id="@+id/counterNameText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/counterName"/>

    <EditText
        android:id="@+id/counterName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/nameHint"/>

    <TextView
        android:textColor="#000000"
        android:padding="5dp"
        android:textSize="16sp"
        android:textStyle="bold"
        android:id="@+id/initialValueText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/valueName"/>

    <EditText
        android:id="@+id/initialValue"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/initialHint"
        />

    <TextView
        android:textColor="#000000"
        android:padding="5dp"
        android:textSize="16sp"
        android:textStyle="bold"
        android:id="@+id/counterDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/counterComment"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:scrollbars="horizontal"
        android:hint="@string/commentHint"/>



    <Button
        android:id="@+id/savebutton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center|bottom"
        android:text="@string/save" />

</LinearLayout>